--- a/BC.Client/ClientApp/src/app/app.component.html
+++ b/BC.Client/ClientApp/src/app/app.component.html
@@ -1,7 +1,8 @@
 <body>
   <app-nav-menu></app-nav-menu>
+  <lib-bc-common></lib-bc-common>
+  <ion-button color="primary">Hello</ion-button>
   <div class="container">
     <router-outlet></router-outlet>
-    <lib-bc-common></lib-bc-common>
   </div>
 </body>
