--- a/BC.Client/ClientApp/src/app/masters/masters-list/masters-list.component.css
+++ b/BC.Client/ClientApp/src/app/masters/masters-list/masters-list.component.css
@@ -34,6 +34,13 @@
   cursor: pointer;
 }
 
+ion-img{
+  width: 100px;
+  height: 100px;
+  border: deeppink 2px solid;
+  margin: 2px;
+}
+
 .test_header_top {
   position: sticky;
   top: 0;
