vm and cards add

--- a/BC.Client/ClientApp/src/app/masters/masters-list/masters-list.component.html
+++ b/BC.Client/ClientApp/src/app/masters/masters-list/masters-list.component.html
@@ -35,31 +35,18 @@
       <ion-button color="warning" slot="end">Yes!!</ion-button>
     </ion-item>
 
-    <ion-card>
+    <ion-card *ngFor="let master of vm.Masters">
       <ion-item color="primary">
-        <ion-img src="https://24smi.org/public/media/celebrity/2019/04/16/ebullttytnug-sergei-zverev.jpg"></ion-img>
-        <ion-content color="warning">
+        <ion-img [src]="master.Avatar"></ion-img>
+        <div class="card-text">
           <ion-card-subtitle>
-            Sergey Nyashka Zverev
+            {{master.Name}}
           </ion-card-subtitle>
           <ion-card-title>
-            Chisto Krasavchik
+            {{master.Service}}
           </ion-card-title>
-        </ion-content>
+        </div>
       </ion-item>
-<!--      <ion-card-header>-->
-<!--        <ion-card-subtitle>Card Subtitle</ion-card-subtitle>-->
-<!--        <ion-card-title>Card Title</ion-card-title>-->
-<!--      </ion-card-header>-->
-<!--      <ion-item href="/home/card" class="ion-activated">-->
-<!--        <ion-icon name="wine" slot="start"></ion-icon>-->
-<!--        <ion-label>Card Link Item 2</ion-label>-->
-<!--        <ion-button fill="outline" slot="end">View</ion-button>-->
-<!--      </ion-item>-->
-<!--      <ion-card-content>-->
-<!--        Keep close to Nature's heart... and break clear away, once in awhile,-->
-<!--        and climb a mountain or spend a week in the woods. Wash your spirit clean.-->
-<!--      </ion-card-content>-->
     </ion-card>
 
   </ion-content>
