--- a/BC.Client/ClientApp/src/app/masters/masters-list/masters-list.component.css
+++ b/BC.Client/ClientApp/src/app/masters/masters-list/masters-list.component.css
@@ -34,6 +34,14 @@
   cursor: pointer;
 }
 
+.card-text{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  background-color: orange;
+}
+
 ion-img{
   width: 100px;
   height: 100px;
