--- a/BC.Client/ClientApp/src/app/masters/masters-list/masters-list.component.html
+++ b/BC.Client/ClientApp/src/app/masters/masters-list/masters-list.component.html
@@ -43,7 +43,7 @@
             {{master.Name}}
           </ion-card-subtitle>
           <ion-card-title>
-            {{master.Service}}
+            {{master.Spec}}
           </ion-card-title>
         </div>
       </ion-item>
