master detail id add

--- a/BC.Client/ClientApp/src/app/masters/masters-list/masters-list.component.html
+++ b/BC.Client/ClientApp/src/app/masters/masters-list/masters-list.component.html
@@ -46,6 +46,7 @@
             {{master.Spec}}
           </ion-card-title>
         </div>
+        <ion-button color="danger" href="/master/{{master.Id}}">View</ion-button>
       </ion-item>
     </ion-card>
 
