--- a/BC.Client/ClientApp/src/app/masters/master-profile/master-profile.component.html
+++ b/BC.Client/ClientApp/src/app/masters/master-profile/master-profile.component.html
@@ -1,17 +1,17 @@
 <ion-app>
   <ion-header>
     <ion-img
-      src="https://youtrack.strong-code.pro/_classpath/smartui/img/default/youtrack-sign.svg"></ion-img>
+      [src]="vm.Master.Avatar"></ion-img>
   </ion-header>
   <ion-content>
     <ion-item>
       <ion-label>
-        123
+        Name: {{vm.Master.Name}}
       </ion-label>
     </ion-item>
     <ion-item>
       <ion-label>
-        123
+        Spec: {{vm.Master.Spec}}
       </ion-label>
     </ion-item>
     GUID (Globally Unique Identifier) — статистически уникальный 128-битный идентификатор. Его главная особенность —
