--- a/BC.Client/Client/src/app/masters/masters-list/masters-list.component.html
+++ b/BC.Client/Client/src/app/masters/masters-list/masters-list.component.html
@@ -1,19 +1,22 @@
 <ion-app>
-  
+
   <ion-header>
     <ion-toolbar color="warning">
       <ion-item color="primary">
         <ion-button class="menu_icon" slot="start" color="warning" (click)="openFirst()">Menu</ion-button>
         <ion-title>
           Masters
-          <!--<lib-bc-common></lib-bc-common>-->
+          <lib-bc-common></lib-bc-common>
         </ion-title>
       </ion-item>
     </ion-toolbar>
   </ion-header>
 
-  <ion-content #filter color="secondary" [ngClass]="filterStatus === false ? 'hidden_filter' : filterStatus === true ? 'visible_filter' : ''" ></ion-content>
-  
+  <ion-content #filter color="secondary" [ngClass]="{
+    'hidden_filter': filterStatus === false, 
+    'visible_filter': filterStatus === true
+  }"></ion-content>
+
   <ion-content [scrollEvents]="true" (ionScrollStart)="logScrollStart()" (ionScroll)="logScrolling($event)">
 
     <ion-item color="primary" #topMenu>
