--- a/BC.Client/Client/src/app/masters/masters-list/masters-list.component.css
+++ b/BC.Client/Client/src/app/masters/masters-list/masters-list.component.css
@@ -36,7 +36,7 @@ ion-app{
   --width: 80%;
 }
 
-.menu_icon {
+.menu-icon {
   cursor: pointer;
 }
 
@@ -55,7 +55,7 @@ ion-img{
   margin: 2px;
 }
 
-.header_top {
+.header-top {
   position: sticky;
   top: 0;
   z-index: 2;
@@ -63,14 +63,14 @@ ion-img{
   animation: down 0.2s;
 }
 
-.visible_filter{
+.visible-filter{
   width: 90%;
   height: 80%;
   position: fixed;
   z-index: 3;
 }
 
-.hidden_filter{
+.hidden-filter{
   display: none;
 }
 
