--- a/BC.Client/Client/src/app/home/home.page.html
+++ b/BC.Client/Client/src/app/home/home.page.html
@@ -16,7 +16,10 @@
 
   <div id="container">
     <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-      <a href="/masters">Masters</a>
+    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI
+      Components</a></p>
+    <a href="/masters">Masters</a>
+    <br>
+    <a href="/authentication">Authentication</a>
   </div>
 </ion-content>
