--- a/BC.Client/Client/src/app/masters/masters-list/masters-list.component.html
+++ b/BC.Client/Client/src/app/masters/masters-list/masters-list.component.html
@@ -1,64 +1,65 @@
 <ion-app>
 
   <ion-header>
-    <ion-toolbar color="warning">
-      <ion-item color="primary">
-        <!--        <ion-button class="menu-icon" slot="start" color="warning" (click)="openFirst()">Menu</ion-button>-->
+    <ion-toolbar>
+      <ion-item>
+        <!--        <ion-button class="menu-icon" slot="start" (click)="openFirst()">Menu</ion-button>-->
         <ion-title>
-          Masters
+          Мастера
           <!--          <lib-bc-common></lib-bc-common>-->
         </ion-title>
       </ion-item>
     </ion-toolbar>
   </ion-header>
 
-  <ion-content #filter color="secondary" [ngClass]="{
+  <ion-content [scrollEvents]="true" (ionScrollStart)="logScrollStart()" (ionScroll)="logScrolling($event)">
+
+    <ion-item #topMenu>
+      <ion-label slot="start">Need cut some hairs, sweet?</ion-label>
+      <ion-button fill="outline" color="medium" (click)="filterStatus = true" slot="end">Yes!!</ion-button>
+    </ion-item>
+    
+    <ion-card *ngFor="let master of vm.Masters">
+      <ion-card-title>{{master.Name}}</ion-card-title>
+      <div class="card_content">
+        <ion-avatar>
+          <ion-img [src]="master.Avatar"></ion-img>
+        </ion-avatar>
+      <ion-item class="card_text">
+        <ion-card-content>{{master.Spec}} Content root path: D:\Code\Timur\BC\beauty-circle\BC.API
+        </ion-card-content>
+        <ion-button fill="outline" color="medium" slot="end" href="/master/{{master.Id}}">View</ion-button>
+      </ion-item>
+      </div>
+    </ion-card>
+
+  </ion-content>
+
+  <ion-footer>
+    <ion-toolbar>
+      <ion-item>
+        <ion-title>
+          BC
+        </ion-title>
+      </ion-item>
+    </ion-toolbar>
+  </ion-footer>
+  <!--  -->
+  <!--  -->
+  <!--  -->
+  <ion-content #filter color="medium" [ngClass]="{
     'hidden-filter': filterStatus === false, 
     'visible-filter': filterStatus === true
   }">
-    <ion-button color="warning" (click)="filterStatus = false">Exit</ion-button>
-    <ion-button color="warning">Exit2</ion-button>
-    <ion-button color="warning">Exit3</ion-button>
+    <ion-button color="danger" (click)="filterStatus = false">Exit</ion-button>
   </ion-content>
 
   <ion-content (click)="filterStatus = false" class="filter-background" [ngClass]="{
     'hidden-filter': filterStatus === false, 
     'visible-filter': filterStatus === true
   }">
+    <!--    -->
+    <!--    -->
+    <!--    -->
   </ion-content>
-
-  <ion-content [scrollEvents]="true" (ionScrollStart)="logScrollStart()" (ionScroll)="logScrolling($event)">
-
-    <ion-item color="primary" #topMenu>
-      <ion-label slot="start">Need cut some hairs, sweet?</ion-label>
-      <ion-button (click)="filterStatus = true" color="warning" slot="end">Yes!!</ion-button>
-    </ion-item>
-
-    <ion-card *ngFor="let master of vm.Masters">
-      <ion-item color="primary">
-        <ion-img [src]="master.Avatar"></ion-img>
-        <div class="card-text">
-          <ion-card-subtitle>
-            {{master.Name}}
-          </ion-card-subtitle>
-          <ion-card-title>
-            {{master.Spec}}
-          </ion-card-title>
-        </div>
-        <ion-button color="danger" href="/master/{{master.Id}}">View</ion-button>
-      </ion-item>
-    </ion-card>
-
-  </ion-content>
-
-  <ion-footer>
-    <ion-toolbar color="warning">
-      <ion-item color="primary">
-        <ion-title>
-          Footer
-        </ion-title>
-      </ion-item>
-    </ion-toolbar>
-  </ion-footer>
-
 </ion-app>
