--- a/BC.Client/Client/src/app/masters/master-profile/master-profile.component.html
+++ b/BC.Client/Client/src/app/masters/master-profile/master-profile.component.html
@@ -1,9 +1,6 @@
 <ion-app>
-  <ion-header>
-    <ion-img
-      [src]="vm.Master.Avatar"></ion-img>
-  </ion-header>
   <ion-content>
+    <ion-img [src]="vm.Master.Avatar"></ion-img>
     <ion-item>
       <ion-label>
         Name: {{vm.Master.Name}}
@@ -14,17 +11,21 @@
         Spec: {{vm.Master.Spec}}
       </ion-label>
     </ion-item>
-    GUID (Globally Unique Identifier) — статистически уникальный 128-битный идентификатор. Его главная особенность —
-    уникальность, которая позволяет создавать расширяемые сервисы и приложения без опасения конфликтов, вызванных
-    совпадением идентификаторов. Хотя уникальность каждого отдельного GUID не гарантируется, общее количество уникальных
-    ключей настолько велико (2128 или 3,4028×1038), что вероятность того, что в мире будут независимо сгенерированы два
-    совпадающих ключа, крайне мала.
+    <div style="padding: 1em;">
+      GUID (Globally Unique Identifier) — статистически уникальный 128-битный идентификатор. Его главная особенность —
+      уникальность, которая позволяет создавать расширяемые сервисы и приложения без опасения конфликтов, вызванных
+      совпадением идентификаторов. Хотя уникальность каждого отдельного GUID не гарантируется, общее количество
+      уникальных
+      ключей настолько велико (2128 или 3,4028×1038), что вероятность того, что в мире будут независимо сгенерированы
+      два
+      совпадающих ключа, крайне мала.
 
-    «GUID» называют некоторые реализации стандарта, имеющего название Universally Unique Identifier (UUID).
+      «GUID» называют некоторые реализации стандарта, имеющего название Universally Unique Identifier (UUID).
 
-    В тексте GUID записывается в виде строки из тридцати двух шестнадцатеричных цифр, разбитой на группы дефисами и
-    опционально окружённой фигурными скобками:
+      В тексте GUID записывается в виде строки из тридцати двух шестнадцатеричных цифр, разбитой на группы дефисами и
+      опционально окружённой фигурными скобками:
 
-    6F9619FF-8B86-D011-B42D-00CF4FC964FF
+      6F9619FF-8B86-D011-B42D-00CF4FC964FF
+    </div>
   </ion-content>
 </ion-app>
