--- a/BC.Client/Client/src/app/masters/masters-list/masters-list.component.css
+++ b/BC.Client/Client/src/app/masters/masters-list/masters-list.component.css
@@ -1,92 +1,108 @@
 #container {
-  text-align: center;
+    text-align: center;
 
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 #container strong {
-  font-size: 20px;
-  line-height: 26px;
+    font-size: 20px;
+    line-height: 26px;
 }
 
 #container p {
-  font-size: 16px;
-  line-height: 22px;
+    font-size: 16px;
+    line-height: 22px;
 
-  color: #8c8c8c;
+    color: #8c8c8c;
 
-  margin: 0;
+    margin: 0;
 }
 
 #container a {
-  text-decoration: none;
+    text-decoration: none;
 }
 
-ion-card{    
+ion-card {
     padding: 1em;
 }
 
-ion-card-title{
+ion-card-title {
     margin-bottom: 0.5em;
 }
 
-ion-app{
-  display: flex;
-  justify-content: center;
-  align-items: center;
+ion-app {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .my-custom-menu {
-  --width: 80%;
+    --width: 80%;
 }
 
 .menu-icon {
-  cursor: pointer;
+    cursor: pointer;
 }
 
-.card_content{
+.mark_item {
+    width: 5%;
+}
+
+.card_main_info {
     display: flex;
 }
 
-.card_text{
+.card_description {
+    margin-top: 0.5em;
+}
+
+.card_text {
     width: 100%;
 }
 
+.links_item {
+
+}
+
+.link {
+    margin-left: 1em;
+}
+
 .header-top {
-  position: sticky;
-  top: 0;
-  z-index: 2;
-  width: 100%;
-  animation: down 0.2s;
+    position: sticky;
+    top: 0;
+    z-index: 2;
+    width: 100%;
+    animation: down 0.2s;
 }
 
-.visible-filter{
-  width: 50%;
-  height: 50%;
-  position: fixed;
-  z-index: 12;
+.visible-filter {
+    width: 50%;
+    height: 50%;
+    position: fixed;
+    z-index: 12;
 }
 
-.hidden-filter{
-  display: none;
+.hidden-filter {
+    display: none;
 }
 
-.filter-background{
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  opacity: 30%;
-  z-index: 11;
+.filter-background {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    opacity: 30%;
+    z-index: 11;
 }
 
 @keyframes down {
-  0% {
-    transform: translate(0,-200px);
-  }
-  100% {
-  }
+    0% {
+        transform: translate(0, -200px);
+    }
+    100% {
+    }
 }
