--- a/BC.Client/Client/src/app/app.component.html
+++ b/BC.Client/Client/src/app/app.component.html
@@ -1,3 +1,3 @@
-<ion-app>
-  <ion-router-outlet></ion-router-outlet>
+<ion-app [@routeAnimations]="prepareRoute(outlet)">
+  <ion-router-outlet #outlet="outlet"></ion-router-outlet>
 </ion-app>
