--- a/BC.Client/Client/src/app/authentication/authentication/authentication.component.html
+++ b/BC.Client/Client/src/app/authentication/authentication/authentication.component.html
@@ -58,7 +58,7 @@
         </div>
 
         <div class="form_text">
-          <a href="/">Зарегестрируйтесь</a>
+          <a [routerLink]="['../']">Зарегестрируйтесь</a>
         </div>
 
       </div>
