--- a/BC.Client/Client/src/app/masters/master-profile/master-profile.component.html
+++ b/BC.Client/Client/src/app/masters/master-profile/master-profile.component.html
@@ -12,6 +12,7 @@
       </ion-label>
     </ion-item>
     <ion-button [routerLink]="['../../masters']">gotest</ion-button>
+    <a [routerLink]="['/']">Main</a>
     GUID (Globally Unique Identifier) — статистически уникальный 128-битный идентификатор. Его главная особенность —
     уникальность, которая позволяет создавать расширяемые сервисы и приложения без опасения конфликтов, вызванных
     совпадением идентификаторов. Хотя уникальность каждого отдельного GUID не гарантируется, общее количество уникальных
