welcome page add

--- a/BC.Client/Client/src/app/home/home.page.html
+++ b/BC.Client/Client/src/app/home/home.page.html
@@ -20,6 +20,6 @@
       Components</a></p>
     <a [routerLink]="['../masters']" routerLinkActive="active">Masters</a>
     <br/>
-    <a [routerLink]="['../authentication']" routerLinkActive="active">Auth</a>
+    <a [routerLink]="['../welcome']" routerLinkActive="active">Authentication</a>
   </div>
 </ion-content>
