--- a/BC.Client/Client/src/global.scss
+++ b/BC.Client/Client/src/global.scss
@@ -18,3 +18,8 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+html{
+  min-height: 500px;
+  min-width: 500px;
+}
