--- a/BC.Client/Client/src/app/masters/master-profile/master-profile.component.html
+++ b/BC.Client/Client/src/app/masters/master-profile/master-profile.component.html
@@ -1,14 +1,14 @@
 <ion-app>
   <ion-content>
-    <ion-img [src]="vm.Master.Avatar"></ion-img>
+    <ion-img [src]="vm.Master.avatarUrl"></ion-img>
     <ion-item>
       <ion-label>
-        Name: {{vm.Master.Name}}
+        Name: {{vm.Master.name}}
       </ion-label>
     </ion-item>
     <ion-item>
       <ion-label>
-        Spec: {{vm.Master.Spec}}
+        Spec: {{vm.Master.speciality}}
       </ion-label>
     </ion-item>
     <ion-button [routerLink]="['../../masters']">gotest</ion-button>
