--- a/BC.Common/workspace/projects/bc-master/src/app/app.component.html
+++ b/BC.Common/workspace/projects/bc-master/src/app/app.component.html
@@ -1,8 +1,3 @@
-﻿<!--<ion-app [@routeAnimations]="prepareRoute(outlet)">-->
-<!--  <ion-router-outlet #outlet="outlet"></ion-router-outlet>-->
-<!--</ion-app>-->
-<ion-app>
-  <ion-content>
-    <lib-bc-common></lib-bc-common>
-  </ion-content>
+﻿<ion-app [@routeAnimations]="prepareRoute(outlet)">
+  <ion-router-outlet #outlet="outlet"></ion-router-outlet>
 </ion-app>
